@@ -1,3 +1,7 @@
+2003-07-16  Ravi Pratap  <ravi@ximian.com>
+
+	* test-39.cs: Improve test to check emission on interfaces too.
+
 2003-07-14  Ravi Pratap M  <ravi@ximian.com>
 
 	* Makefile: Make sure that we use the newly generated compiler
